Bug 127047 - Font Sizes Greater than 255 are Printed with Size 255
Summary: Font Sizes Greater than 255 are Printed with Size 255
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, regression
: 128963 (view as bug list)
Depends on:
Blocks: Print
  Show dependency treegraph
 
Reported: 2019-08-20 09:19 UTC by Harald Koester
Modified: 2020-10-30 14:36 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Document created with export function of LibreOffice (6.37 KB, application/pdf)
2019-09-24 12:14 UTC, Harald Koester
Details
Document created with PDF printer driver (3.18 KB, application/pdf)
2019-09-24 12:15 UTC, Harald Koester
Details
tests file (11.64 KB, application/x-zip-compressed)
2020-05-04 14:36 UTC, Julien Nabet
Details
printer pdf (255 and 350) (3.69 KB, application/x-zip-compressed)
2020-05-04 14:39 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2019-08-20 09:19:58 UTC
In order to reproduce the bug:

[1] Open new text document.
[2] Chose font size 255 and insert 2 letters.
[3] Print document.
[4] Select letters and chose greater font size, e.g. 350.
[5] Print document and compare it with first print. The size of the letters is equal and there is a gap between both letters. Expected: Greater font size and no gap in second print.

Also in Calc, Draw and Impress font sizes greater than 255 are printed with size 255.

This bug is new in version 6.1.0. Therefore it is a regression. 

A workaround is possible but not at once obvious: Export document as PDF and print PDF with PDF viewer.
Comment 1 Xisco Faulí 2019-09-23 14:56:42 UTC
I can't reproduce it in

Version: 6.4.0.0.alpha0+
Build ID: f23e19cd15f14566832befba73fb6bbc1cffb0d7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Could you please try to reproduce it with a master build from http://dev-builds.libreoffice.org/daily/master/ ?
You can install it alongside the standard version.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the master build
Comment 2 Harald Koester 2019-09-24 12:14:29 UTC
Created attachment 154426 [details]
Document created with export function of LibreOffice
Comment 3 Harald Koester 2019-09-24 12:15:51 UTC
Created attachment 154427 [details]
Document created with PDF printer driver
Comment 4 Harald Koester 2019-09-24 12:21:09 UTC
Checked with version 6.3.1 release. Bug still exists.

Checked with

Version: 6.4.0.0.alpha0+ (x64)
Build ID: b2d8093b19642038631dfb8f1ab6745a380a652c
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-23_22:42:37
Locale: de-DE (de_DE); UI-Language: en-US
Calc: threaded

Bug also exists in this version.

I've attached 2 PDF documents. The first one is created with the export function of LibreOffice. This document is OK. In the second one, which is created with PDF printer driver, the font size is too small (255). In both cases the original font size is 350.
Comment 5 Buovjaga 2020-04-19 16:43:46 UTC
Bibisected with win 6.1 repo to https://git.libreoffice.org/core/+/335036f0d05bdfde49cacf245863c686d07a2d5f%5E!/

tdf#116812: Revert "The mfFontScale[n] is always 1.0"
Comment 6 Buovjaga 2020-04-27 13:07:32 UTC
*** Bug 128963 has been marked as a duplicate of this bug. ***
Comment 7 Julien Nabet 2020-05-04 13:34:24 UTC
On Windows 10 with master sources updated today, I see that font size goes from 6pt to 96pt.
Where can I find "255" ?
Comment 8 Buovjaga 2020-05-04 14:29:53 UTC
(In reply to Julien Nabet from comment #7)
> On Windows 10 with master sources updated today, I see that font size goes
> from 6pt to 96pt.
> Where can I find "255" ?

Just type it in the input field.
Comment 9 Julien Nabet 2020-05-04 14:36:19 UTC
Created attachment 160336 [details]
tests file

Thank you Buovjaga!

On Win10 with master sources updated today, I don't reproduce this.
I used 255 and 350 (see pdfs).
Comment 10 Julien Nabet 2020-05-04 14:37:03 UTC
oups, perhaps it's just when using printing part.
I'll give a new try.
Comment 11 Julien Nabet 2020-05-04 14:39:31 UTC
Created attachment 160337 [details]
printer pdf (255 and 350)

I don't reproduce this too with PDF printer.
Comment 12 Buovjaga 2020-05-04 14:41:43 UTC
(In reply to Julien Nabet from comment #11)
> Created attachment 160337 [details]
> printer pdf (255 and 350)
> 
> I don't reproduce this too with PDF printer.

You PDF for 350 shows the bad result. Just like attachment 154427 [details] there are gaps between the letters, but the size is still 255.
Comment 13 Julien Nabet 2020-05-04 14:47:19 UTC
Indeed! Export PDF is ok but not print PDF.
Comment 14 Noel Grandin 2020-09-21 13:50:18 UTC
Julien, could you test
    https://gerrit.libreoffice.org/c/core/+/103113
please?
Comment 15 Julien Nabet 2020-09-21 18:42:20 UTC
(In reply to Noel Grandin from comment #14)
> Julien, could you test
>     https://gerrit.libreoffice.org/c/core/+/103113
> please?

I don't have a Windows build anymore just a build on my Linux desktop.
I gave a try without applying the patch, it seems already ok to me.
Comment 16 Commit Notification 2020-10-19 10:21:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6137de745606e9ccee94119fd1f8b7a90c4aa323

tdf#127047 fix printing very large font sizes to pdf

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2020-10-26 15:43:48 UTC
@Harald Koester, any chance you could verify the fix with a daily build from https://dev-builds.libreoffice.org/daily/master/current.html ?
Comment 18 Commit Notification 2020-10-27 09:36:14 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/df49ea498788d1c7fb440504f3a17ca9f4d82c13

tdf#127047 fix printing very large font sizes to pdf

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Buovjaga 2020-10-30 14:36:16 UTC
Verified, thanks

Version: 7.1.0.0.alpha1+ (x64)
Build ID: b61bf7c7cfcf97a5ade6d130873af146670bc2ee
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: default; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded