tdf#127047 fix printing very large font sizes to pdf

The clamping of font sizes was done in #i47675 and #i95867
to deal with issues in the Windows font libraries which are
presumably no longer a problem.

Change-Id: I124a3ff746953ce4d7d934506e76e6d0cba48307